--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,32 @@
 version: "3.8"
 
 services:
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server=kafka:9092"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
   web:
     image: activatestaff:latest
+    depends_on:
+      - kafka
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,3 +34,6 @@ services:
       - "8080:8080"
     environment:
       NODE_ENV: development
+      KAFKAJS_NO_PARTITIONER_WARNING: 1
+      MONGO_URI: YOUR_MONGO_URI_WOULD_BE_HERE
+      MONGO_DB_NAME: YOUR_MONGO_DB_NAME_WOULD_BE_HERE
