--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,16 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
   web:
     image: activatestaff:latest
     depends_on:
       - kafka
+      - redis
     build:
       context: .
       dockerfile: Dockerfile
