Add CI/CD pipeline and update Docker environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,6 @@ redis:
       - "8080:8080"
     environment:
       NODE_ENV: development
+      MONGO_URI: ${MONGO_URI}
+      MONGO_DB_NAME: ${MONGO_DB_NAME}
       KAFKAJS_NO_PARTITIONER_WARNING: 1
-      MONGO_URI: YOUR_MONGO_URI_WOULD_BE_HERE
-      MONGO_DB_NAME: YOUR_MONGO_DB_NAME_WOULD_BE_HERE
