--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,8 +22,15 @@ jobs:
 
       - name: Build and test
         run: |
-          npm run build  
+          npm run build
           npm test
+
+  build-and-push-docker:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
@@ -35,9 +42,24 @@ jobs:
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push saiyedrushan/activatestaff:latest
 
-      - name: Start Docker Compose
+  deploy-to-gke:
+    runs-on: ubuntu-latest
+    needs: [build, build-and-push-docker]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          version: "latest"
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure gcloud CLI
         run: |
-          docker-compose up -d
-        env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-          MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
+          gcloud config set project ${{ secrets.PROJECT_NAME }}  
+          gcloud container clusters get-credentials ${{ secrets.CLUSTER_NAME }} --region us-central1 --project ${{ secrets.PROJECT_NAME }}
+
+      - name: Deploy to GKE
+        run: |
+          kubectl apply -f ../k8s/
